# CustomTkinter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt  setup.cfg  test_simple_label.py  test_vgkit_look.py
customtkinter/: __init__.py
customtkinter/windows/: ctk_tk.py
customtkinter/windows/widgets/: __init__.py  ctk_container.py  ctk_frame.py  ctk_simple_label.py
examples/: complex_example.py  example_background_image.py  image_example.py  scrollable_frame_example.py  simple_example.py
test/: test_grid_remove_scaling.py  test_visual_grid_remove_scaling.py
test/manual_integration_tests/: simple_example_standard_tkinter.py  test_all_widgets_with_colors.py  test_button_antialiasing.py  test_configure_dimensions.py  test_ctk_toplevel.py  test_filedialog.py  test_font.py  test_images.py  test_optionmenu_combobox.py  test_progressbar_intermediate_mode.py  test_scrollable_frame.py  test_segmented_button.py  test_states.py  test_string_dialog.py  test_tabview.py  test_textbox.py  test_theme_colors.py  test_ttk_frames.py  test_variables.py  test_vertical_widgets.py  test_window_geometry.py  text_entry_placeholder.py
test/manual_integration_tests/test_ctk_behavior/: test_ctk_appearance_mode_change.py  test_ctk_iconify_at_beginning.py  test_ctk_withdraw_at_beginning.py  test_ctk_zoomed_state.py
test/unit_tests/: test_ctk.py  test_ctk_button.py  test_ctk_entry.py  test_ctk_toplevel.py
vgkit/: __init__.py
vgkit/windows/: __init__.py  ctk_input_dialog.py  ctk_tk.py  ctk_toplevel.py
(+52 files in other folders)
