[metadata]
name = vgkit
version = 0.1.0
description = Create modern looking GUIs with Python
long_description = A modern and customizable python UI-library based on Tkinter, forked from CustomTkinter: https://github.com/moooozi/vgkit
long_description_content_type = text/markdown
url = https://github.com/moooozi/vgkit
author = M Zidane
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[project.urls]
homepage = https://github.com/moooozi/vgkit
documentation = https://github.com/moooozi/vgkit
repository = https://github.com/moooozi/vgkit

[options]
python_requires = >=3.7
packages =
    vgkit
    vgkit.windows
    vgkit.windows.widgets
    vgkit.windows.widgets.appearance_mode
    vgkit.windows.widgets.core_rendering
    vgkit.windows.widgets.core_widget_classes
    vgkit.windows.widgets.font
    vgkit.windows.widgets.image
    vgkit.windows.widgets.scaling
    vgkit.windows.widgets.theme
    vgkit.windows.widgets.utility
install_requires =
    darkdetect
    typing_extensions; python_version<="3.7"
    packaging
include_package_data = True



